scraping the index page and dumping Summary and Details

--- a/youtube_downloader/rough.ipynb
+++ b/youtube_downloader/rough.ipynb
@@ -40,6 +40,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytube import Playlist\n",
+    "\n",
+    "p = Playlist(\"https://www.youtube.com/playlist?list=PL2fxME0rbf-0xpsRZ0QMqB1TictYnLaMH\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Interview Breakdowns'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.title"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
